<resources>
    <string name="app_name">Nmedia</string>
    <string name="app_text">NmediaAppTextReallyLongText</string>
    <string name="post_avatar">Post avatar</string>
    <string name="likes_button">Likes Button</string>
    <string name="share_post_button">Share Post Button</string>
    <string name="views_button">Views Button</string>
    <string name="Edit">Edit</string>
    <string name="Remove">Remove</string>
    <string name="Post_menu">Post Menu</string>
    <string name="post_text">Enter your text</string>
    <string name="error_empty_content">Content can`t be empty!</string>
    <string name="app_header">NMedia</string>
    <string name="publish">Publish</string>
    <string name="rollback_text">Rollback Text</string>
    <string name="chooser_share_post">Share post</string>
    <string name="save">Save</string>
    <string name="add_post">Add post</string>
    <string name="video">Video</string>
    <string name="video_url">Video URL</string>
    <string name="play_video">Play video</string>
    <string name="notification_user_liked">%1$s liked %2$s</string>
    <string name="channel_remote_description">Notifications from server</string>
    <string name="channel_remote_name">Nmedia Notifications</string>
    <string name="notification_user_new_message"> %1$s message to you: %2$s</string>
    <string name="notification_user_new_post" > %1$s wrote: %2$s</string>
    <string name="empty_list">Empty list</string>
    <string name="network_error">Network Error</string>
    <string name="retry">Retry</string>
    <string name="attachment">attachment</string>
    <string name="server_error">Server Error</string>
    <string name="appears_on_http_server_errors">Appears on Http Server Errors</string>
    <string name="http_error">Http Error %1$s</string>
	<string name="error_loading">Error loading data</string>
	<string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="new_posts">New posts:</string>
    <string name="select_photo">Select Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_attachment">Photo attachment</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="noLoginData">Username or password is empty</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logoutConfirm">"Logout confirm?"</string>
    <string name="cancel">"Cancel"</string>
    <string name="user_not_found">"User Not Found"</string>
    <string name="unknown_error">"Unknown Error"</string>
    <string name="new_notification">"New Notification"</string>
    <string name="user_already_exists">"User Already Exists"</string>
    <string name="passwords_are_not_equal">"Password and password confirmation do not match"</string>
</resources>